--- a/TestPathDesigner.App/Views/MainPage.xaml
+++ b/TestPathDesigner.App/Views/MainPage.xaml
@@ -9,6 +9,13 @@
       Title="MainPage">
 
     <Grid Background="MistyRose">
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Title,Mode=TwoWay}"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Title,Mode=TwoWay}"/>
+        <ListView Grid.Column="0">
+            
+        </ListView>
     </Grid>
 </Page>
