--- a/TestPathDesigner.App/Views/MainPage.xaml
+++ b/TestPathDesigner.App/Views/MainPage.xaml
@@ -8,29 +8,63 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MainPage">
 
-    <Grid Background="MistyRose">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" Orientation="Vertical">
-                <TextBox Text="{Binding AppName, Mode=TwoWay}"/>
-                <TextBox Text="{Binding ElementName, Mode=TwoWay}"/>
-                <ComboBox ItemsSource="{Binding Types}" SelectedItem="{Binding ElementType, Mode=TwoWay}">
-                    
-                </ComboBox>
-            </StackPanel>
-            <Button Margin="50,10,50,0" Grid.Row="1" Command="{Binding AddNewTestCommand}" Content="Add Test Path"/>
-            <Button Margin="50,0,50,10" Grid.Row="2" VerticalContentAlignment="Bottom" VerticalAlignment="Bottom" Content="Start Testing" Command="{Binding StartTestingCommand}"/>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+        <Grid Background="MistyRose" Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0" Orientation="Vertical">
+                    <TextBox Text="{Binding AppName, Mode=TwoWay}"/>
+                    <TextBox Text="{Binding ElementName, Mode=TwoWay}"/>
+                    <ComboBox ItemsSource="{Binding Types}" SelectedItem="{Binding ElementType, Mode=TwoWay}"/>
+                </StackPanel>
+                <Button Margin="50,10,50,0" Grid.Row="1" Command="{Binding AddNewTestCommand}" Content="Add Test Path"/>
+                <StackPanel Grid.Row="2" Orientation="Vertical">
+                    <ListView MaxHeight="200" ItemsSource="{Binding CreatedPath, Mode=TwoWay}" Margin="20">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid HorizontalAlignment="Stretch" Width="Auto">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" MinWidth="50"/>
+                                        <ColumnDefinition Width="Auto" MinWidth="200"/>
+                                        <ColumnDefinition Width="*" MinWidth="50"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding ElementName}" Grid.Column="0"/>
+                                    <TextBlock Text="{Binding ElementType}" Grid.Column="1"/>
+                                    <TextBlock Text="{Binding Action}"      Grid.Column="2"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" Margin="20" Command="{Binding ExportPath}" Content="Export"/>
+                        <Button Grid.Column="1" Margin="20" Command="{Binding Import}" Content="Import"/>
+                    </Grid>
+                </StackPanel>
+                <Button Margin="50,0,50,10" Grid.Row="3" VerticalContentAlignment="Bottom" VerticalAlignment="Bottom" Content="Start Testing" Command="{Binding StartTestingCommand}"/>
+            </Grid>
+            <ListView ItemsSource="{Binding Logs, Mode=TwoWay}" Grid.Column="1">
+
+            </ListView>
         </Grid>
-        <ListView ItemsSource="{Binding Logs, Mode=TwoWay}" Grid.Column="1">
+        <StackPanel Orientation="Horizontal">
             
-        </ListView>
+        </StackPanel>
     </Grid>
 </Page>
