--- a/TestPathDesigner.App/Views/MainPage.xaml
+++ b/TestPathDesigner.App/Views/MainPage.xaml
@@ -10,8 +10,8 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition MaxHeight="20"/>
         </Grid.RowDefinitions>
         <Grid Background="MistyRose" Grid.Row="0">
             <Grid.ColumnDefinitions>
@@ -63,8 +63,8 @@
 
             </ListView>
         </Grid>
-        <StackPanel Orientation="Horizontal">
-            
+        <StackPanel Orientation="Vertical" Grid.Row="1" Background="Cornsilk">
+            <Border BorderBrush="{Binding}" BorderThickness="8" Width="16" HorizontalAlignment="Left" Margin="10,2,0,0" CornerRadius="10"/>
         </StackPanel>
     </Grid>
 </Page>
