--- a/TestPathDesigner.App/Views/MainPage.xaml
+++ b/TestPathDesigner.App/Views/MainPage.xaml
@@ -64,7 +64,7 @@
             </ListView>
         </Grid>
         <StackPanel Orientation="Vertical" Grid.Row="1" Background="Cornsilk">
-            <Border BorderBrush="{Binding}" BorderThickness="8" Width="16" HorizontalAlignment="Left" Margin="10,2,0,0" CornerRadius="10"/>
+            <Border BorderBrush="{Binding ConnectionStatus,Converter={StaticResource ConnectionStatusToColorConverter}}" BorderThickness="8" Width="16" HorizontalAlignment="Left" Margin="10,2,0,0" CornerRadius="10"/>
         </StackPanel>
     </Grid>
 </Page>
