--- a/TestPathDesigner.App/Views/MainPage.xaml
+++ b/TestPathDesigner.App/Views/MainPage.xaml
@@ -63,9 +63,9 @@
 
             </ListView>
         </Grid>
-        <StackPanel Orientation="Vertical" Grid.Row="1" Background="Cornsilk">
-            <Border BorderBrush="{Binding ConnectionStatus,Converter={StaticResource ConnectionStatusToColorConverter}}" BorderThickness="8" Width="16" HorizontalAlignment="Left" Margin="10,2,0,0" CornerRadius="10"/>
-            <TextBlock Text="{Binding ConnectionStatus, Converter={StaticResource ConnectionStatusToTextConverter}}"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Background="Cornsilk">
+            <Border BorderBrush="{Binding ConnectionStatus,Converter={StaticResource ConnectionStatusToColorConverter}}" BorderThickness="8.5" Width="17" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5,2,0,0" CornerRadius="15"/>
+            <TextBlock Text="{Binding ConnectionStatus,Mode=TwoWay, Converter={StaticResource ConnectionStatusToTextConverter}}" Margin="5,0,0,0" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
         </StackPanel>
     </Grid>
 </Page>
