--- a/TestPathDesigner.App/Views/MainPage.xaml
+++ b/TestPathDesigner.App/Views/MainPage.xaml
@@ -30,7 +30,7 @@
                     <TextBox Text="{Binding ElementName, Mode=TwoWay}"/>
                     <ComboBox ItemsSource="{Binding Types}" SelectedItem="{Binding ElementType, Mode=TwoWay}"/>
                 </StackPanel>
-                <Button Margin="50,10,50,0" Grid.Row="1" Command="{Binding AddNewTestCommand}" Content="Add Test Path"/>
+                <Button Margin="50,10,50,0" Grid.Row="1" Command="{Binding AddCommand}" Content="Add Test Path"/>
                 <StackPanel Grid.Row="2" Orientation="Vertical">
                     <ListView MaxHeight="200" ItemsSource="{Binding CreatedPath, Mode=TwoWay}" Margin="20">
                         <ListView.ItemTemplate>
@@ -41,9 +41,10 @@
                                         <ColumnDefinition Width="Auto" MinWidth="200"/>
                                         <ColumnDefinition Width="*" MinWidth="50"/>
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Text="{Binding ElementName}" Grid.Column="0"/>
+                                    <TextBlock x:Name="EName" Text="{Binding ElementName}" Grid.Column="0"/>
                                     <TextBlock Text="{Binding ElementType}" Grid.Column="1"/>
                                     <TextBlock Text="{Binding Action}"      Grid.Column="2"/>
+                                    <Button Command="{Binding RelativeSource={RelativeSource AncestorType=Page, Mode=FindAncestor}, Path=DataContext.DeleteCommand}" CommandParameter="{Binding }"/>
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
