--- a/StyleLibrary/ButtonStyles.xaml
+++ b/StyleLibrary/ButtonStyles.xaml
@@ -2,8 +2,14 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     x:Name="ButtonStyles">
     <Style 
-        TargetType="Button" x:Key="NewGameButtonStyle">
-        <Setter Property="Background" Value="Red"/>
-        <Setter Property="FontSize" Value="18" />
+        TargetType="Button" x:Key="DeleteButton">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="Red"/>
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="Content" Value="X"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="VerticalContentAlignment" Value="Top"/>
     </Style>
 </ResourceDictionary>
