--- a/TestPathDesigner.App/Views/MainPage.xaml
+++ b/TestPathDesigner.App/Views/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TestPathDesigner.App.Views.MainPage"
+﻿<Window x:Class="TestPathDesigner.App.Views.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -92,4 +92,4 @@
             <TextBlock Text="{Binding ConnectionStatus,Mode=TwoWay, Converter={StaticResource ConnectionStatusToTextConverter}}" Margin="5,0,0,0" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
         </StackPanel>
     </Grid>
-</Page>
+</Window>
