--- a/TestPathDesigner.App/Views/MainPage.xaml
+++ b/TestPathDesigner.App/Views/MainPage.xaml
@@ -1,18 +1,23 @@
 ﻿<Window x:Class="TestPathDesigner.App.Views.MainPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TestPathDesigner.App.Views"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="MainPage">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:local="clr-namespace:TestPathDesigner.App.Views"
+        mc:Ignorable="d" Background="Transparent"
+        WindowStyle="None" AllowsTransparency="True"
+        d:DesignHeight="450" d:DesignWidth="800"
+        Title="MainPage">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
             <RowDefinition MaxHeight="20"/>
         </Grid.RowDefinitions>
         <Grid Background="#0E100F" Grid.Row="0">
+
+        </Grid>
+        <Grid Background="#0E100F" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -83,11 +88,11 @@
                 </StackPanel>
                 <Button IsEnabled="{Binding IsAppSet}" Margin="50,0,50,10" Grid.Row="3" VerticalContentAlignment="Bottom" VerticalAlignment="Bottom" Content="Start Testing" Command="{Binding StartTestingCommand}"/>
             </Grid>
-            <ListView Background="#0E100F" Foreground="White" ItemsSource="{Binding Logs, Mode=TwoWay}" Grid.Column="1">
+            <ListView Background="#0E100F" Foreground="White" ItemsSource="{Binding Logs, Mode=TwoWay}" Margin="10" Grid.Column="1">
 
             </ListView>
         </Grid>
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Background="Cornsilk">
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Background="Cornsilk">
             <Border BorderBrush="{Binding ConnectionStatus,Converter={StaticResource ConnectionStatusToColorConverter}}" BorderThickness="8.5" Width="17" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5,2,0,0" CornerRadius="15"/>
             <TextBlock Text="{Binding ConnectionStatus,Mode=TwoWay, Converter={StaticResource ConnectionStatusToTextConverter}}" Margin="5,0,0,0" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
         </StackPanel>
