--- a/StyleLibrary/ButtonStyles.xaml
+++ b/StyleLibrary/ButtonStyles.xaml
@@ -12,5 +12,9 @@
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="VerticalContentAlignment" Value="Top"/>
     </Style>
+    <Style TargetType="Button" x:Key="ExitButton">
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="Content" Value="Exit"/>
+    </Style>
    
 </ResourceDictionary>
